# winsys-overlay

./: .gitignore  AGENTS.md  CMakeLists.txt  HardwareMonitor.cpp  HardwareMonitor.h  LICENSE  README.md  TempReader.cs  adl.cpp  adl.h  logs.txt  main.cpp  nvml.cpp  nvml.h  overlaywidget.cpp  overlaywidget.h  settingsdialog.cpp  settingsdialog.h  sysinfomonitor.cpp  sysinfomonitor.h  winrt.props
.github/workflow/: release.yml
.github/workflows/: release.yml
src/cpp/: overlaywidget.cpp  overlaywidget.h  sysinfomonitor.cpp  sysinfomonitor.h
src/csharp/: TempReader.cs  TempReader.csproj
